--- a/iot-e2e-tests/android/app/build.gradle
+++ b/iot-e2e-tests/android/app/build.gradle
@@ -2,18 +2,15 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '25.0.0'
 
     defaultConfig {
         applicationId "com.iothub.azure.microsoft.com.androidsample"
         minSdkVersion 24
         targetSdkVersion 25
+        multiDexEnabled true
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        jackOptions {
-            enabled true
-        }
     }
     buildTypes {
         release {
@@ -36,28 +33,27 @@ android {
         exclude 'META-INF/NOTICE.txt'
         exclude 'thirdpartynotice.txt'
     }
-    dexOptions {
-        incremental true
-    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    lintOptions{
+        ignore 'InvalidPackage'
+    }
 }
 
-
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-
-    compile 'com.android.support:appcompat-v7:25.3.0'
-    androidTestCompile 'com.android.support:support-annotations:25.3.0'
-    androidTestCompile 'com.android.support.test:runner:0.5'
-    androidTestCompile 'junit:junit:4.12'
-    compile ('com.microsoft.azure.sdk.iot:iot-e2e-common:0.10.14'){
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support:appcompat-v7:25.4.0'
+    implementation 'com.android.support:multidex:1.0.3'
+    implementation ('com.microsoft.azure.sdk.iot:iot-e2e-common:0.20.0'){
         exclude module: 'junit'
     }
-    compile 'com.microsoft.azure.sdk.iot:iot-service-client:1.9.25'
+    androidTestImplementation 'com.android.support:support-annotations:27.1.1'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'junit:junit:4.12'
 }
 
 repositories {
