--- a/device/iot-device-client/pom.xml
+++ b/device/iot-device-client/pom.xml
@@ -138,6 +138,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.0</version>
                 <configuration>
+                    <rerunFailingTestsCount>2</rerunFailingTestsCount>
                     <forkCount>1</forkCount>
                     <reuseForks>true</reuseForks>
                     <argLine>
@@ -158,6 +159,7 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <rerunFailingTestsCount>2</rerunFailingTestsCount>
                     <forkCount>1</forkCount>
                     <reuseForks>true</reuseForks>
                     <argLine>
