--- a/service/iot-service-client/pom.xml
+++ b/service/iot-service-client/pom.xml
@@ -116,6 +116,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.0</version>
                 <configuration>
+                    <rerunFailingTestsCount>2</rerunFailingTestsCount>
                     <forkCount>1</forkCount>
                     <reuseForks>true</reuseForks>
                     <argLine>
@@ -136,6 +137,7 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <rerunFailingTestsCount>2</rerunFailingTestsCount>
                     <forkCount>1</forkCount>
                     <reuseForks>true</reuseForks>
                 </configuration>
